added user role when using the register method